# agentbook

./: .env.example  .gitignore  .impeccable.md  CHANGELOG.md  CLAUDE.md  GOAL.md  Makefile  README.md  README.zh-CN.md  alembic.ini  nixpacks.toml  nx.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  project.json  pyproject.toml  railpack.json  railway.toml  simulation_report.json
.git-agent/: config.yml  project.yml
.github/workflows/: ci.yml
.playwright-mcp/: page-2026-04-19T05-39-41-434Z.yml  page-2026-04-19T05-40-25-917Z.yml  page-2026-04-19T05-45-10-371Z.yml
agent/: .env.example  README.md  project.json  pyproject.toml  railway.toml
agent/src/: backoff.py  config.py  llm.py  main.py  program.md  research_loop.py  researcher_agent.py  reviewer_agent.py  rules.py  synthesis.py  tools.py
agent/tests/: __init__.py  test_agent_runtime_regressions.py  test_async_cycle.py  test_backoff.py  test_research_loop.py  test_reviewer_agent.py  test_reviewer_agent_import.py  test_rules.py  test_session.py
alembic/: env.py
alembic/versions/: 0e9f022e7009_add_problem_version_for_optimistic_.py  1891b48a0ace_add_review_fields_to_threads_and_.py  20260204_0001_init.py  2026_04_21_add_outcome_kind_column_default_observed.py  2026_04_28_backfill_outcome_kind_for_sandbox_reporter.py  2026_05_05_outcome_kind_not_null_with_check.py  2026_05_06_add_outcome_error_after.py  2026_05_12_add_agent_ip_and_fingerprint_hashes.py  4b624264d69e_add_problem_version_for_optimistic_.py  7e8a50adfe56_add_research_started_at_to_problems.py  bdf1f1e79252_add_v2_resolution_graph_tables.py  c3a1f7d82e94_drop_unused_columns.py  c6dadb0fd799_remove_token_economy.py  c7bae2af560d_add_ix_problems_research_started_at_index.py  d4e5f6a7b8c9_unify_v2_table_names.py  dab0405cde18_add_solution_promotion_status.py  dd782cb96759_add_research_candidates_index.py  e5f6a7b8c9d0_add_research_loop_fields.py  e8f9a1b2c3d4_drop_solution_author_verified.py  f0a1b2c3d4e5_add_llm_model_to_solutions_and_cycles.py  f5g6h7i8j9k0_unify_v1_v2.py  g1h2i3j4k5l6_backfill_llm_model_from_agents.py  h1a2b3c4d5e6_add_problems_description_tsvector_gin.py  m6f7a8b9cabd_drop_solution_environment_scores.py  n9o0p1q2r3s4_add_embedding_v2_column.py  p1q2r3s4t5u6_outcome_reporter_solution_unique.py  q2r3s4t5u6v7_normalize_embedding_columns_to_json.py  r3s4t5u6v7w8_add_structured_knowledge_to_solutions.py  s4t5u6v7w8x9_add_root_cause_class_to_solutions.py  t5u6v7w8x9y0_add_query_events_table.py  u6v7w8x9y0z1_add_query_events_is_seeded_hit.py
app/: demo.py  main.py  project.json
app/application/: confidence.py  errors.py  gate.py  quality_gate.py  service.py  (+1 more)
backend/: demo.py  main.py  project.json
docs/: README.md  autoresearch-feature-analysis.md  confidence-changelog.md  deployment-china.md  deployment.md  design-review-2026-05.md  dynamic-instructions-best-practices.md  first-pilot-playbook.md  gtm-plan.md  mcp-client-setup.md  mcp-setup.md  platform-unification-best-practices.md  principles.md  quickstart-dynamic-instructions.md  reference-autoresearch.md  research-summary-dynamic-instructions.md  retrieval-baseline.md  security-checklist-dynamic-instructions.md  terms.md  testing-strategy-dynamic-instructions.md  vision-reflection-2026-06-04.md
examples/: README.md  measure_lift.py  recall_first_client.py  seed_book.py  seed_corpus.py
frontend/: AUDIT-FOLLOWUP.md  biome.json  next.config.ts  open-next.config.ts  package.json  pnpm-lock.yaml  project.json  railway.toml  vitest.config.ts  vitest.setup.ts  wrangler.jsonc
sandbox_service/: Dockerfile  README.md  package.json  pyodide_runner.mjs  railway.toml  server.py
scripts/: check_frozen_policy.sh  e2e_verify_live.py  poll-pr51-reviews.sh  prep_campaign_input.py  rebaseline_confidence.py  release_gate.sh  seed_realistic_data.py  smoke_test.sh  sync-env.sh  update_openrouter_model_labels.py  validate-env.sh
shared/: __init__.py  config.py  provider_keys.py
simulation/: __init__.py  adversary.py  orchestrator.py  personas.py  problem_templates.py  report_generator.py  rest_client.py  run_simulation.py
tests/: conftest.py
web/: AUDIT-FOLLOWUP.md  next.config.ts  package.json  pnpm-lock.yaml  project.json  railway.toml  tailwind.config.ts  vitest.setup.ts
(+1222 files in other folders)
