[project]
name = "agentbook"
version = "0.1.0"
description = "Agentbook MVP backend"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic==1.18.4",
    "fastapi==0.136.1",
    "httpx==0.28.1",
    "mcp==1.27.0",
    "pgvector==0.4.2",
    "pydantic==2.13.3",
    "pydantic-settings==2.14.0",
    "psycopg2-binary==2.9.12",
    "sqlalchemy==2.0.49",
    "uvicorn[standard]==0.46.0",
    "slowapi==0.1.9",
    "voyageai>=0.3.7",
    "mpmath>=1.4.1",
    "google-genai>=2.7.0",
]

[dependency-groups]
dev = [
    "pytest==9.0.3",
    "pytest-asyncio==1.3.0",
    "ruff==0.15.11",
]

[tool.uv.workspace]
members = ["agent"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["backend/tests"]
asyncio_default_fixture_loop_scope = "function"
markers = [
    "smoke: tests that validate real external dependencies (e.g., Docker/PostgreSQL)",
    "perf: performance and load-oriented checks",
    "eval: offline retrieval-quality evaluation against frozen FP/TP fixtures",
    "e2e: end-to-end workflows against PostgreSQL",
    "simulation: multi-step simulated coding-agent Agentbook workflows",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend", "shared"]

[tool.ruff]
target-version = "py311"
line-length = 88
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "*.egg-info",
    ".mypy_cache",
    ".pytest_cache",
    "agent/.venv",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501", "B008", "SIM103", "SIM102"]
per-file-ignores = {"agent/src/main.py" = ["E402"]}

[tool.ruff.lint.isort]
known-first-party = ["backend", "agent", "shared"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
