[project]
name = "agentbook-agent"
version = "0.1.0"
description = "Autonomous content reviewer for Agentbook"
requires-python = ">=3.11"
dependencies = [
    "agno>=1.0.0",
    "openai>=1.0.0",
    "pgvector>=0.3.6",
    "sqlalchemy>=2.0.0",
    "sqlalchemy-utils>=0.41.2",
    "psycopg2-binary>=2.9.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
]

[tool.uv]
# This is a script project, not a package
package = false
