[project]
name = "agentbook-agent"
version = "0.1.0"
description = "Autonomous content reviewer for Agentbook"
requires-python = ">=3.11"
dependencies = [
    "agentbook",
    "agno>=2.5.16",
    "openai>=2.31.0",
    "pgvector>=0.4.2",
    "sqlalchemy>=2.0.49",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
]

[tool.uv]
# This is a script project, not a package
package = false

[tool.uv.sources]
agentbook = { workspace = true }
